// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`destroying zfs updates the state 1`] = `
"{
  \\"14919184393193585238\\": {
    \\"name\\": \\"test\\",
    \\"guid\\": \\"14919184393193585238\\",
    \\"health\\": \\"ONLINE\\",
    \\"hostname\\": \\"localhost.localdomain\\",
    \\"hostid\\": null,
    \\"state\\": \\"ACTIVE\\",
    \\"readonly\\": false,
    \\"size\\": 83886080,
    \\"vdev\\": {
      \\"Root\\": {
        \\"children\\": [
          {
            \\"Mirror\\": {
              \\"children\\": [
                {
                  \\"Disk\\": {
                    \\"guid\\": \\"0xBE4606AF1C39DC3F\\",
                    \\"state\\": \\"ONLINE\\",
                    \\"path\\": \\"/dev/sdb1\\",
                    \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G1-part1\\",
                    \\"phys_path\\": \\"pci-0000:00:0d.0-ata-2.0\\",
                    \\"whole_disk\\": true,
                    \\"is_log\\": null
                  }
                },
                {
                  \\"Disk\\": {
                    \\"guid\\": \\"0xCC43D91716DA2522\\",
                    \\"state\\": \\"ONLINE\\",
                    \\"path\\": \\"/dev/sdc1\\",
                    \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G2-part1\\",
                    \\"phys_path\\": \\"pci-0000:00:0d.0-ata-3.0\\",
                    \\"whole_disk\\": true,
                    \\"is_log\\": null
                  }
                }
              ],
              \\"is_log\\": false
            }
          }
        ],
        \\"spares\\": [
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x4DD5D18F6C1F6B34\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sde1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G4-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-5.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          },
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x58650FD679A8842D\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sdf1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G5-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-6.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          }
        ],
        \\"cache\\": [
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x70008C8B94F8AFA8\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sdd1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G3-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-4.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          }
        ]
      }
    },
    \\"props\\": [],
    \\"datasets\\": [
      {
        \\"name\\": \\"test/ds\\",
        \\"guid\\": \\"9760213047416233279\\",
        \\"kind\\": \\"filesystem\\",
        \\"props\\": [
          {
            \\"name\\": \\"name\\",
            \\"value\\": \\"test/ds\\"
          },
          {
            \\"name\\": \\"type\\",
            \\"value\\": \\"filesystem\\"
          },
          {
            \\"name\\": \\"creation\\",
            \\"value\\": \\"1521929884\\"
          },
          {
            \\"name\\": \\"used\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"available\\",
            \\"value\\": \\"41751040\\"
          },
          {
            \\"name\\": \\"referenced\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"compressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"mounted\\",
            \\"value\\": \\"yes\\"
          },
          {
            \\"name\\": \\"quota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"reservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"recordsize\\",
            \\"value\\": \\"131072\\"
          },
          {
            \\"name\\": \\"mountpoint\\",
            \\"value\\": \\"/test/ds\\"
          },
          {
            \\"name\\": \\"sharenfs\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"checksum\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"compression\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"atime\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"devices\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"exec\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"setuid\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"readonly\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"zoned\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"snapdir\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"aclinherit\\",
            \\"value\\": \\"restricted\\"
          },
          {
            \\"name\\": \\"createtxg\\",
            \\"value\\": \\"6\\"
          },
          {
            \\"name\\": \\"canmount\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"xattr\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"copies\\",
            \\"value\\": \\"1\\"
          },
          {
            \\"name\\": \\"version\\",
            \\"value\\": \\"5\\"
          },
          {
            \\"name\\": \\"utf8only\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"normalization\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"casesensitivity\\",
            \\"value\\": \\"sensitive\\"
          },
          {
            \\"name\\": \\"vscan\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"nbmand\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"sharesmb\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"refquota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"refreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"guid\\",
            \\"value\\": \\"9760213047416233279\\"
          },
          {
            \\"name\\": \\"primarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"secondarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"usedbysnapshots\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbydataset\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"usedbychildren\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbyrefreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"logbias\\",
            \\"value\\": \\"latency\\"
          },
          {
            \\"name\\": \\"dedup\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"mlslabel\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"sync\\",
            \\"value\\": \\"standard\\"
          },
          {
            \\"name\\": \\"dnodesize\\",
            \\"value\\": \\"legacy\\"
          },
          {
            \\"name\\": \\"refcompressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"written\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"logicalused\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"logicalreferenced\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"volmode\\",
            \\"value\\": \\"default\\"
          },
          {
            \\"name\\": \\"filesystem_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"filesystem_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapdev\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"acltype\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"context\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"fscontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"defcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"rootcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"relatime\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"redundant_metadata\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"overlay\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"lustre:mgsnode\\",
            \\"value\\": \\"10.14.82.0@tcp:10.14.82.1@tcp\\"
          }
        ]
      }
    ]
  }
}"
`;

exports[`remove dataset 1`] = `
Object {
  "datasets": Array [
    Object {
      "guid": "9760213047416233279",
      "kind": "filesystem",
      "name": "test/ds",
      "props": Array [
        Object {
          "name": "name",
          "value": "test/ds",
        },
        Object {
          "name": "type",
          "value": "filesystem",
        },
        Object {
          "name": "creation",
          "value": "1521929884",
        },
        Object {
          "name": "used",
          "value": "24576",
        },
        Object {
          "name": "available",
          "value": "41751040",
        },
        Object {
          "name": "referenced",
          "value": "24576",
        },
        Object {
          "name": "compressratio",
          "value": "1.00x",
        },
        Object {
          "name": "mounted",
          "value": "yes",
        },
        Object {
          "name": "quota",
          "value": "0",
        },
        Object {
          "name": "reservation",
          "value": "0",
        },
        Object {
          "name": "recordsize",
          "value": "131072",
        },
        Object {
          "name": "mountpoint",
          "value": "/test/ds",
        },
        Object {
          "name": "sharenfs",
          "value": "off",
        },
        Object {
          "name": "checksum",
          "value": "on",
        },
        Object {
          "name": "compression",
          "value": "off",
        },
        Object {
          "name": "atime",
          "value": "on",
        },
        Object {
          "name": "devices",
          "value": "on",
        },
        Object {
          "name": "exec",
          "value": "on",
        },
        Object {
          "name": "setuid",
          "value": "on",
        },
        Object {
          "name": "readonly",
          "value": "off",
        },
        Object {
          "name": "zoned",
          "value": "off",
        },
        Object {
          "name": "snapdir",
          "value": "hidden",
        },
        Object {
          "name": "aclinherit",
          "value": "restricted",
        },
        Object {
          "name": "createtxg",
          "value": "6",
        },
        Object {
          "name": "canmount",
          "value": "on",
        },
        Object {
          "name": "xattr",
          "value": "on",
        },
        Object {
          "name": "copies",
          "value": "1",
        },
        Object {
          "name": "version",
          "value": "5",
        },
        Object {
          "name": "utf8only",
          "value": "off",
        },
        Object {
          "name": "normalization",
          "value": "none",
        },
        Object {
          "name": "casesensitivity",
          "value": "sensitive",
        },
        Object {
          "name": "vscan",
          "value": "off",
        },
        Object {
          "name": "nbmand",
          "value": "off",
        },
        Object {
          "name": "sharesmb",
          "value": "off",
        },
        Object {
          "name": "refquota",
          "value": "0",
        },
        Object {
          "name": "refreservation",
          "value": "0",
        },
        Object {
          "name": "guid",
          "value": "9760213047416233279",
        },
        Object {
          "name": "primarycache",
          "value": "all",
        },
        Object {
          "name": "secondarycache",
          "value": "all",
        },
        Object {
          "name": "usedbysnapshots",
          "value": "0",
        },
        Object {
          "name": "usedbydataset",
          "value": "24576",
        },
        Object {
          "name": "usedbychildren",
          "value": "0",
        },
        Object {
          "name": "usedbyrefreservation",
          "value": "0",
        },
        Object {
          "name": "logbias",
          "value": "latency",
        },
        Object {
          "name": "dedup",
          "value": "off",
        },
        Object {
          "name": "mlslabel",
          "value": "none",
        },
        Object {
          "name": "sync",
          "value": "standard",
        },
        Object {
          "name": "dnodesize",
          "value": "legacy",
        },
        Object {
          "name": "refcompressratio",
          "value": "1.00x",
        },
        Object {
          "name": "written",
          "value": "24576",
        },
        Object {
          "name": "logicalused",
          "value": "12288",
        },
        Object {
          "name": "logicalreferenced",
          "value": "12288",
        },
        Object {
          "name": "volmode",
          "value": "default",
        },
        Object {
          "name": "filesystem_limit",
          "value": "18446744073709551615",
        },
        Object {
          "name": "snapshot_limit",
          "value": "18446744073709551615",
        },
        Object {
          "name": "filesystem_count",
          "value": "18446744073709551615",
        },
        Object {
          "name": "snapshot_count",
          "value": "18446744073709551615",
        },
        Object {
          "name": "snapdev",
          "value": "hidden",
        },
        Object {
          "name": "acltype",
          "value": "off",
        },
        Object {
          "name": "context",
          "value": "none",
        },
        Object {
          "name": "fscontext",
          "value": "none",
        },
        Object {
          "name": "defcontext",
          "value": "none",
        },
        Object {
          "name": "rootcontext",
          "value": "none",
        },
        Object {
          "name": "relatime",
          "value": "off",
        },
        Object {
          "name": "redundant_metadata",
          "value": "all",
        },
        Object {
          "name": "overlay",
          "value": "off",
        },
        Object {
          "name": "lustre:mgsnode",
          "value": "10.14.82.0@tcp:10.14.82.1@tcp",
        },
      ],
    },
  ],
  "guid": "14919184393193585238",
  "health": "ONLINE",
  "hostid": null,
  "hostname": "localhost.localdomain",
  "name": "test",
  "props": Array [],
  "readonly": false,
  "size": 83886080,
  "state": "ACTIVE",
  "vdev": VDev {
    "data": Object {
      "Root": Object {
        "cache": Array [
          VDev {
            "data": Object {
              "Disk": Object {
                "dev_id": "ata-VBOX_HARDDISK_081118FC1221NCJ6G8G3-part1",
                "guid": "0x70008C8B94F8AFA8",
                "is_log": null,
                "path": "/dev/sdd1",
                "phys_path": "pci-0000:00:0d.0-ata-4.0",
                "state": "ONLINE",
                "whole_disk": true,
              },
            },
            "tag": 2,
          },
        ],
        "children": Array [
          VDev {
            "data": Object {
              "Mirror": Object {
                "children": Array [
                  VDev {
                    "data": Object {
                      "Disk": Object {
                        "dev_id": "ata-VBOX_HARDDISK_081118FC1221NCJ6G8G1-part1",
                        "guid": "0xBE4606AF1C39DC3F",
                        "is_log": null,
                        "path": "/dev/sdb1",
                        "phys_path": "pci-0000:00:0d.0-ata-2.0",
                        "state": "ONLINE",
                        "whole_disk": true,
                      },
                    },
                    "tag": 2,
                  },
                  VDev {
                    "data": Object {
                      "Disk": Object {
                        "dev_id": "ata-VBOX_HARDDISK_081118FC1221NCJ6G8G2-part1",
                        "guid": "0xCC43D91716DA2522",
                        "is_log": null,
                        "path": "/dev/sdc1",
                        "phys_path": "pci-0000:00:0d.0-ata-3.0",
                        "state": "ONLINE",
                        "whole_disk": true,
                      },
                    },
                    "tag": 2,
                  },
                ],
                "is_log": false,
              },
            },
            "tag": 3,
          },
        ],
        "spares": Array [
          VDev {
            "data": Object {
              "Disk": Object {
                "dev_id": "ata-VBOX_HARDDISK_081118FC1221NCJ6G8G4-part1",
                "guid": "0x4DD5D18F6C1F6B34",
                "is_log": null,
                "path": "/dev/sde1",
                "phys_path": "pci-0000:00:0d.0-ata-5.0",
                "state": "ONLINE",
                "whole_disk": true,
              },
            },
            "tag": 2,
          },
          VDev {
            "data": Object {
              "Disk": Object {
                "dev_id": "ata-VBOX_HARDDISK_081118FC1221NCJ6G8G5-part1",
                "guid": "0x58650FD679A8842D",
                "is_log": null,
                "path": "/dev/sdf1",
                "phys_path": "pci-0000:00:0d.0-ata-6.0",
                "state": "ONLINE",
                "whole_disk": true,
              },
            },
            "tag": 2,
          },
        ],
      },
    },
    "tag": 0,
  },
}
`;

exports[`setting a new zfs prop 1`] = `
"{
  \\"14919184393193585238\\": {
    \\"name\\": \\"test\\",
    \\"guid\\": \\"14919184393193585238\\",
    \\"health\\": \\"ONLINE\\",
    \\"hostname\\": \\"localhost.localdomain\\",
    \\"hostid\\": null,
    \\"state\\": \\"ACTIVE\\",
    \\"readonly\\": false,
    \\"size\\": 83886080,
    \\"vdev\\": {
      \\"Root\\": {
        \\"children\\": [
          {
            \\"Mirror\\": {
              \\"children\\": [
                {
                  \\"Disk\\": {
                    \\"guid\\": \\"0xBE4606AF1C39DC3F\\",
                    \\"state\\": \\"ONLINE\\",
                    \\"path\\": \\"/dev/sdb1\\",
                    \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G1-part1\\",
                    \\"phys_path\\": \\"pci-0000:00:0d.0-ata-2.0\\",
                    \\"whole_disk\\": true,
                    \\"is_log\\": null
                  }
                },
                {
                  \\"Disk\\": {
                    \\"guid\\": \\"0xCC43D91716DA2522\\",
                    \\"state\\": \\"ONLINE\\",
                    \\"path\\": \\"/dev/sdc1\\",
                    \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G2-part1\\",
                    \\"phys_path\\": \\"pci-0000:00:0d.0-ata-3.0\\",
                    \\"whole_disk\\": true,
                    \\"is_log\\": null
                  }
                }
              ],
              \\"is_log\\": false
            }
          }
        ],
        \\"spares\\": [
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x4DD5D18F6C1F6B34\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sde1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G4-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-5.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          },
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x58650FD679A8842D\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sdf1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G5-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-6.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          }
        ],
        \\"cache\\": [
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x70008C8B94F8AFA8\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sdd1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G3-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-4.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          }
        ]
      }
    },
    \\"props\\": [],
    \\"datasets\\": [
      {
        \\"name\\": \\"test/ds2\\",
        \\"guid\\": \\"11387853141151442667\\",
        \\"kind\\": \\"filesystem\\",
        \\"props\\": [
          {
            \\"name\\": \\"name\\",
            \\"value\\": \\"test/ds2\\"
          },
          {
            \\"name\\": \\"type\\",
            \\"value\\": \\"filesystem\\"
          },
          {
            \\"name\\": \\"creation\\",
            \\"value\\": \\"1522333734\\"
          },
          {
            \\"name\\": \\"used\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"available\\",
            \\"value\\": \\"41751040\\"
          },
          {
            \\"name\\": \\"referenced\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"compressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"mounted\\",
            \\"value\\": \\"yes\\"
          },
          {
            \\"name\\": \\"quota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"reservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"recordsize\\",
            \\"value\\": \\"131072\\"
          },
          {
            \\"name\\": \\"mountpoint\\",
            \\"value\\": \\"/test/ds2\\"
          },
          {
            \\"name\\": \\"sharenfs\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"checksum\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"compression\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"atime\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"devices\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"exec\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"setuid\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"readonly\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"zoned\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"snapdir\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"aclinherit\\",
            \\"value\\": \\"restricted\\"
          },
          {
            \\"name\\": \\"createtxg\\",
            \\"value\\": \\"6638\\"
          },
          {
            \\"name\\": \\"canmount\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"xattr\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"copies\\",
            \\"value\\": \\"1\\"
          },
          {
            \\"name\\": \\"version\\",
            \\"value\\": \\"5\\"
          },
          {
            \\"name\\": \\"utf8only\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"normalization\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"casesensitivity\\",
            \\"value\\": \\"sensitive\\"
          },
          {
            \\"name\\": \\"vscan\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"nbmand\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"sharesmb\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"refquota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"refreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"guid\\",
            \\"value\\": \\"11387853141151442667\\"
          },
          {
            \\"name\\": \\"primarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"secondarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"usedbysnapshots\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbydataset\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"usedbychildren\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbyrefreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"logbias\\",
            \\"value\\": \\"latency\\"
          },
          {
            \\"name\\": \\"dedup\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"mlslabel\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"sync\\",
            \\"value\\": \\"standard\\"
          },
          {
            \\"name\\": \\"dnodesize\\",
            \\"value\\": \\"legacy\\"
          },
          {
            \\"name\\": \\"refcompressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"written\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"logicalused\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"logicalreferenced\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"volmode\\",
            \\"value\\": \\"default\\"
          },
          {
            \\"name\\": \\"filesystem_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"filesystem_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapdev\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"acltype\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"context\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"fscontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"defcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"rootcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"relatime\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"redundant_metadata\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"overlay\\",
            \\"value\\": \\"off\\"
          }
        ]
      },
      {
        \\"name\\": \\"test/ds\\",
        \\"guid\\": \\"9760213047416233279\\",
        \\"kind\\": \\"filesystem\\",
        \\"props\\": [
          {
            \\"name\\": \\"foo:bar\\",
            \\"value\\": \\"baz\\"
          },
          {
            \\"name\\": \\"name\\",
            \\"value\\": \\"test/ds\\"
          },
          {
            \\"name\\": \\"type\\",
            \\"value\\": \\"filesystem\\"
          },
          {
            \\"name\\": \\"creation\\",
            \\"value\\": \\"1521929884\\"
          },
          {
            \\"name\\": \\"used\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"available\\",
            \\"value\\": \\"41751040\\"
          },
          {
            \\"name\\": \\"referenced\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"compressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"mounted\\",
            \\"value\\": \\"yes\\"
          },
          {
            \\"name\\": \\"quota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"reservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"recordsize\\",
            \\"value\\": \\"131072\\"
          },
          {
            \\"name\\": \\"mountpoint\\",
            \\"value\\": \\"/test/ds\\"
          },
          {
            \\"name\\": \\"sharenfs\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"checksum\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"compression\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"atime\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"devices\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"exec\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"setuid\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"readonly\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"zoned\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"snapdir\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"aclinherit\\",
            \\"value\\": \\"restricted\\"
          },
          {
            \\"name\\": \\"createtxg\\",
            \\"value\\": \\"6\\"
          },
          {
            \\"name\\": \\"canmount\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"xattr\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"copies\\",
            \\"value\\": \\"1\\"
          },
          {
            \\"name\\": \\"version\\",
            \\"value\\": \\"5\\"
          },
          {
            \\"name\\": \\"utf8only\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"normalization\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"casesensitivity\\",
            \\"value\\": \\"sensitive\\"
          },
          {
            \\"name\\": \\"vscan\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"nbmand\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"sharesmb\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"refquota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"refreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"guid\\",
            \\"value\\": \\"9760213047416233279\\"
          },
          {
            \\"name\\": \\"primarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"secondarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"usedbysnapshots\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbydataset\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"usedbychildren\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbyrefreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"logbias\\",
            \\"value\\": \\"latency\\"
          },
          {
            \\"name\\": \\"dedup\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"mlslabel\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"sync\\",
            \\"value\\": \\"standard\\"
          },
          {
            \\"name\\": \\"dnodesize\\",
            \\"value\\": \\"legacy\\"
          },
          {
            \\"name\\": \\"refcompressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"written\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"logicalused\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"logicalreferenced\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"volmode\\",
            \\"value\\": \\"default\\"
          },
          {
            \\"name\\": \\"filesystem_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"filesystem_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapdev\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"acltype\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"context\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"fscontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"defcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"rootcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"relatime\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"redundant_metadata\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"overlay\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"lustre:mgsnode\\",
            \\"value\\": \\"10.14.82.0@tcp:10.14.82.1@tcp\\"
          }
        ]
      }
    ]
  }
}"
`;

exports[`setting a new zpool prop 1`] = `
"{
  \\"14919184393193585238\\": {
    \\"name\\": \\"test\\",
    \\"guid\\": \\"14919184393193585238\\",
    \\"health\\": \\"ONLINE\\",
    \\"hostname\\": \\"localhost.localdomain\\",
    \\"hostid\\": null,
    \\"state\\": \\"ACTIVE\\",
    \\"readonly\\": false,
    \\"size\\": 83886080,
    \\"vdev\\": {
      \\"Root\\": {
        \\"children\\": [
          {
            \\"Mirror\\": {
              \\"children\\": [
                {
                  \\"Disk\\": {
                    \\"guid\\": \\"0xBE4606AF1C39DC3F\\",
                    \\"state\\": \\"ONLINE\\",
                    \\"path\\": \\"/dev/sdb1\\",
                    \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G1-part1\\",
                    \\"phys_path\\": \\"pci-0000:00:0d.0-ata-2.0\\",
                    \\"whole_disk\\": true,
                    \\"is_log\\": null
                  }
                },
                {
                  \\"Disk\\": {
                    \\"guid\\": \\"0xCC43D91716DA2522\\",
                    \\"state\\": \\"ONLINE\\",
                    \\"path\\": \\"/dev/sdc1\\",
                    \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G2-part1\\",
                    \\"phys_path\\": \\"pci-0000:00:0d.0-ata-3.0\\",
                    \\"whole_disk\\": true,
                    \\"is_log\\": null
                  }
                }
              ],
              \\"is_log\\": false
            }
          }
        ],
        \\"spares\\": [
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x4DD5D18F6C1F6B34\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sde1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G4-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-5.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          },
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x58650FD679A8842D\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sdf1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G5-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-6.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          }
        ],
        \\"cache\\": [
          {
            \\"Disk\\": {
              \\"guid\\": \\"0x70008C8B94F8AFA8\\",
              \\"state\\": \\"ONLINE\\",
              \\"path\\": \\"/dev/sdd1\\",
              \\"dev_id\\": \\"ata-VBOX_HARDDISK_081118FC1221NCJ6G8G3-part1\\",
              \\"phys_path\\": \\"pci-0000:00:0d.0-ata-4.0\\",
              \\"whole_disk\\": true,
              \\"is_log\\": null
            }
          }
        ]
      }
    },
    \\"props\\": [
      {
        \\"name\\": \\"foo:bar\\",
        \\"value\\": \\"baz\\"
      }
    ],
    \\"datasets\\": [
      {
        \\"name\\": \\"test/ds2\\",
        \\"guid\\": \\"11387853141151442667\\",
        \\"kind\\": \\"filesystem\\",
        \\"props\\": [
          {
            \\"name\\": \\"name\\",
            \\"value\\": \\"test/ds2\\"
          },
          {
            \\"name\\": \\"type\\",
            \\"value\\": \\"filesystem\\"
          },
          {
            \\"name\\": \\"creation\\",
            \\"value\\": \\"1522333734\\"
          },
          {
            \\"name\\": \\"used\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"available\\",
            \\"value\\": \\"41751040\\"
          },
          {
            \\"name\\": \\"referenced\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"compressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"mounted\\",
            \\"value\\": \\"yes\\"
          },
          {
            \\"name\\": \\"quota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"reservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"recordsize\\",
            \\"value\\": \\"131072\\"
          },
          {
            \\"name\\": \\"mountpoint\\",
            \\"value\\": \\"/test/ds2\\"
          },
          {
            \\"name\\": \\"sharenfs\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"checksum\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"compression\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"atime\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"devices\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"exec\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"setuid\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"readonly\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"zoned\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"snapdir\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"aclinherit\\",
            \\"value\\": \\"restricted\\"
          },
          {
            \\"name\\": \\"createtxg\\",
            \\"value\\": \\"6638\\"
          },
          {
            \\"name\\": \\"canmount\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"xattr\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"copies\\",
            \\"value\\": \\"1\\"
          },
          {
            \\"name\\": \\"version\\",
            \\"value\\": \\"5\\"
          },
          {
            \\"name\\": \\"utf8only\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"normalization\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"casesensitivity\\",
            \\"value\\": \\"sensitive\\"
          },
          {
            \\"name\\": \\"vscan\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"nbmand\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"sharesmb\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"refquota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"refreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"guid\\",
            \\"value\\": \\"11387853141151442667\\"
          },
          {
            \\"name\\": \\"primarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"secondarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"usedbysnapshots\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbydataset\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"usedbychildren\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbyrefreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"logbias\\",
            \\"value\\": \\"latency\\"
          },
          {
            \\"name\\": \\"dedup\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"mlslabel\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"sync\\",
            \\"value\\": \\"standard\\"
          },
          {
            \\"name\\": \\"dnodesize\\",
            \\"value\\": \\"legacy\\"
          },
          {
            \\"name\\": \\"refcompressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"written\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"logicalused\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"logicalreferenced\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"volmode\\",
            \\"value\\": \\"default\\"
          },
          {
            \\"name\\": \\"filesystem_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"filesystem_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapdev\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"acltype\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"context\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"fscontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"defcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"rootcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"relatime\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"redundant_metadata\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"overlay\\",
            \\"value\\": \\"off\\"
          }
        ]
      },
      {
        \\"name\\": \\"test/ds\\",
        \\"guid\\": \\"9760213047416233279\\",
        \\"kind\\": \\"filesystem\\",
        \\"props\\": [
          {
            \\"name\\": \\"name\\",
            \\"value\\": \\"test/ds\\"
          },
          {
            \\"name\\": \\"type\\",
            \\"value\\": \\"filesystem\\"
          },
          {
            \\"name\\": \\"creation\\",
            \\"value\\": \\"1521929884\\"
          },
          {
            \\"name\\": \\"used\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"available\\",
            \\"value\\": \\"41751040\\"
          },
          {
            \\"name\\": \\"referenced\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"compressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"mounted\\",
            \\"value\\": \\"yes\\"
          },
          {
            \\"name\\": \\"quota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"reservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"recordsize\\",
            \\"value\\": \\"131072\\"
          },
          {
            \\"name\\": \\"mountpoint\\",
            \\"value\\": \\"/test/ds\\"
          },
          {
            \\"name\\": \\"sharenfs\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"checksum\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"compression\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"atime\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"devices\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"exec\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"setuid\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"readonly\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"zoned\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"snapdir\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"aclinherit\\",
            \\"value\\": \\"restricted\\"
          },
          {
            \\"name\\": \\"createtxg\\",
            \\"value\\": \\"6\\"
          },
          {
            \\"name\\": \\"canmount\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"xattr\\",
            \\"value\\": \\"on\\"
          },
          {
            \\"name\\": \\"copies\\",
            \\"value\\": \\"1\\"
          },
          {
            \\"name\\": \\"version\\",
            \\"value\\": \\"5\\"
          },
          {
            \\"name\\": \\"utf8only\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"normalization\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"casesensitivity\\",
            \\"value\\": \\"sensitive\\"
          },
          {
            \\"name\\": \\"vscan\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"nbmand\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"sharesmb\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"refquota\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"refreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"guid\\",
            \\"value\\": \\"9760213047416233279\\"
          },
          {
            \\"name\\": \\"primarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"secondarycache\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"usedbysnapshots\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbydataset\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"usedbychildren\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"usedbyrefreservation\\",
            \\"value\\": \\"0\\"
          },
          {
            \\"name\\": \\"logbias\\",
            \\"value\\": \\"latency\\"
          },
          {
            \\"name\\": \\"dedup\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"mlslabel\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"sync\\",
            \\"value\\": \\"standard\\"
          },
          {
            \\"name\\": \\"dnodesize\\",
            \\"value\\": \\"legacy\\"
          },
          {
            \\"name\\": \\"refcompressratio\\",
            \\"value\\": \\"1.00x\\"
          },
          {
            \\"name\\": \\"written\\",
            \\"value\\": \\"24576\\"
          },
          {
            \\"name\\": \\"logicalused\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"logicalreferenced\\",
            \\"value\\": \\"12288\\"
          },
          {
            \\"name\\": \\"volmode\\",
            \\"value\\": \\"default\\"
          },
          {
            \\"name\\": \\"filesystem_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_limit\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"filesystem_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapshot_count\\",
            \\"value\\": \\"18446744073709551615\\"
          },
          {
            \\"name\\": \\"snapdev\\",
            \\"value\\": \\"hidden\\"
          },
          {
            \\"name\\": \\"acltype\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"context\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"fscontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"defcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"rootcontext\\",
            \\"value\\": \\"none\\"
          },
          {
            \\"name\\": \\"relatime\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"redundant_metadata\\",
            \\"value\\": \\"all\\"
          },
          {
            \\"name\\": \\"overlay\\",
            \\"value\\": \\"off\\"
          },
          {
            \\"name\\": \\"lustre:mgsnode\\",
            \\"value\\": \\"10.14.82.0@tcp:10.14.82.1@tcp\\"
          }
        ]
      }
    ]
  }
}"
`;
